aligning icons in correct way with margin and padding

--- a/style/resume.css
+++ b/style/resume.css
@@ -42,15 +42,24 @@ body{
     color: brown;
     font-weight: normal;
 }
-
 .education{
+    padding-left: 2rem;
+    letter-spacing: .4rem;
+    word-spacing: 1rem;
+    font-size: 4rem;
+    font-weight: bold;
+    font-family: 'Acme', sans-serif;
+    text-decoration: underline;
+}
+
+.education1{
     font-size:2.5rem ;
     color: brown;
 
 }
 .rightbox{
     background: #F4F3F2;
-    border-left: .01rem solid grey;
+    border-left: .01rem solid lightgrey;
    
 }
 .careerobj{
@@ -74,6 +83,11 @@ body{
 } */
 .skills li{
     font-size: 6rem;
+    /* color: rgb(243, 98, 62); */
+}
+.educationskills li{
+    font-size: 6rem;
+    margin-left: 2.5rem;
     /* color: rgb(243, 98, 62); */
 }
 .fa-html5{
